2004-01-21 Alastair McKinstry <mckinstry@computer.org>

	* configure.in: Added Irish locale "ga" to ALL_LINGUAS

2004.01.10  Arafat Medini <lumina@silverpen.de>
                                                                                
        * configure.in: Added Arabic locale "ar" to ALL_LINGUAS

2004-01-08  Jody Goldberg <jody@gnome.org>

	* gtksourceview/gtksourceprintjob.c (break_line) : make valgrind
	  happier.

2004-01-05  Alexander Winston  <alexander.winston@comcast.net>

	* gtksourceview/language-specs/latex.lang: The string "Latex" was
	swapped out for "LaTeX", the format's proper name.

2004-01-05  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2004-01-03  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" in ALL_LINGUAS.

2003-12-30  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/html.lang: add missing
	keywords (partially fix bug #130220).

=== gtksourceview 0.8.0 ===

2003-12-29  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* configure.in:
	* NEWS:
	* README: Updated for new release.

2003-12-29  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/language-specs/php.lang: Added PHP syntax
	highlighting (file by Francesco Gigli, bug #111060).

	* gtksourceview/language-specs/verilog.lang: Added Verilog syntax
	highlighting spec (file by Paolo Borelli, bug #129942).

2003-12-16  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* tests/Makefile.am: Put back GTK_DISABLE_DEPRECATED flag.
	
	* tests/test-widget.c: Migrated menu creation code from
	GtkItemFactory to the new action based objects in Gtk+ 2.3.  As a
	side effect, now all view windows get their own menu and
	independent configuration.

2003-12-14  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* docs/reference/gtksourceview-docs.sgml: Use a <reference>, not a
	<section> for the API reference.  The index does not build
	correctly otherwise.
